menu overlap fix

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1, h2, h3, h4{
     display: block;
     margin: 0 auto;
     width: 100%;
+    margin-bottom: 30px;
 }
 
 .menu-main-menu-container {
